# gasp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bf-to-torricelly/: CMakeLists.txt
bf-to-torricelly/src/: CMakeLists.txt  bf-to-torricelly.cpp  bf-to-torricelly_error.cpp
blaise-lang/: CMakeLists.txt
blaise-lang-module-loader/: CMakeLists.txt
blaise-lang-module-loader/src/: CMakeLists.txt  blaise_module_loader.cpp
blaise-lang-parser/: CMakeLists.txt
blaise-lang-parser/src/: CMakeLists.txt  blaise_parser.cpp  blaise_parser_context.cpp  blaise_parser_expression.cpp  blaise_parser_statement.cpp  blaise_parser_subroutine.cpp
blaise-lang-parser/test/: CMakeLists.txt  parser.cpp
blaise-lang-parser/test/blaise_test_sources/: 0000_simple_empty_program.blaise  0002_operations_on_integers.blaise  0003_operations_on_booleans.blaise  0004_declarations_of_arrays.blaise
blaise-lang-tokenizer/: CMakeLists.txt
blaise-lang-tokenizer/include/: CMakeLists.txt
blaise-lang-tokenizer/include/gasp/: CMakeLists.txt
blaise-lang-tokenizer/src/: CMakeLists.txt  blaise_token_type_io.cpp  blaise_token_type_provider.cpp  blaise_token_type_utility.cpp  blaise_tokenizer.cpp
blaise-lang-tokenizer/test/: CMakeLists.txt  tokenizer.cpp
blaise-lang/docs/: README.md  grammar.md
blaise-lang/src/: CMakeLists.txt  blaise_ast_common.cpp  blaise_ast_expression.cpp  blaise_ast_expression_utility.cpp  blaise_ast_identifier.cpp  blaise_ast_identifier_utility.cpp  blaise_ast_io.cpp  blaise_ast_module.cpp  blaise_ast_statement.cpp  blaise_ast_statement_utility.cpp  blaise_ast_subroutine.cpp  blaise_ast_type.cpp  blaise_ast_utility.cpp  blaise_ast_variable.cpp  blaise_language_expression.cpp  blaise_language_expression_type.cpp  blaise_language_io.cpp  blaise_language_module.cpp  blaise_language_statement.cpp  blaise_language_subroutine.cpp  blaise_language_type.cpp  blaise_language_utility.cpp  blaise_language_variable.cpp  blaise_parser.cpp  blaise_parser_context.cpp  blaise_parser_expression.cpp  blaise_parser_statement.cpp  blaise_parser_subroutine.cpp  blaise_token_type_io.cpp  blaise_token_type_provider.cpp  blaise_token_type_utility.cpp  blaise_tokenizer.cpp  blase_language_io.cpp  language.cpp  parser.cpp  tokenizer.cpp  tokens.cpp
blaise-lang/test/: CMakeLists.txt  parser.cpp  tokenizer.cpp
blaise-lang/test/blaise_test_sources/: 0001_variable_declaration.blaise  0003_operations_on_booleans.blaise  0004_declarations_of_arrays.blaise  0005_operations_on_arrays.blaise  0006_binary_operators_autocast.blaise  CMakeLists.txt
blaise-to-torricelly/: CMakeLists.txt
blaise-to-torricelly/include/gasp/: CMakeLists.txt
blaise-to-torricelly/src/: CMakeLists.txt  translator.cpp  translator_expression.cpp  translator_statement.cpp
blaise-vscode/: CHANGELOG.md  (+4 more)
gasp/: CMakeLists.txt
gasp/src/: CMakeLists.txt  gasp_module.cpp  gasp_module_blaise_sample.cpp  gasp_module_blaise_test.cpp  gasp_module_compile.cpp  gasp_module_debug.cpp  gasp_module_dump.cpp  gasp_module_execute.cpp  gasp_module_input.cpp  gasp_module_io.cpp  gasp_module_tokenize.cpp  gasp_module_tokenizer.cpp  main.cpp
torricelly-debugger/: CMakeLists.txt
torricelly-debugger/include/gasp/: CMakeLists.txt
torricelly-debugger/src/: CMakeLists.txt  debugger.cpp  debugger_command.cpp  debugger_command_bf-load.cpp  debugger_command_blaise-load.cpp  debugger_command_bp.cpp  debugger_command_code.cpp  debugger_command_help.cpp  debugger_command_inst.cpp  debugger_command_ip.cpp  debugger_command_load.cpp  debugger_command_locals.cpp  debugger_command_run.cpp  debugger_command_stack.cpp  debugger_command_step.cpp  debugger_command_stop.cpp
torricelly-interpreter/: CMakeLists.txt
torricelly-interpreter/include/: CMakeLists.txt
torricelly-interpreter/src/: CMakeLists.txt  activation_record.cpp  activation_record_local.cpp  activation_record_variable.cpp  torricelly_activation_record_local.cpp  torricelly_instruction_interpreter.cpp  torricelly_instruction_interpreter_boolean.cpp  torricelly_instruction_interpreter_cast.cpp  torricelly_instruction_interpreter_compare.cpp  torricelly_instruction_interpreter_general.cpp  torricelly_instruction_interpreter_invoke.cpp  torricelly_instruction_interpreter_jump.cpp  torricelly_instruction_interpreter_memory.cpp  torricelly_instruction_interpreter_numeric.cpp  torricelly_instruction_interpreter_stack.cpp  torricelly_interpreter.cpp  torricelly_module_loader.cpp  torricelly_native_context.cpp  torricelly_native_library_loader.cpp
torricelly-lang/: CMakeLists.txt
torricelly-lang-io/: CMakeLists.txt
torricelly-lang-io/include/gasp/: CMakeLists.txt
torricelly-lang-io/src/: CMakeLists.txt  torricelly_instruction_code_io.cpp  torricelly_instruction_io.cpp  torricelly_io.cpp  torricelly_module_io.cpp  torricelly_subroutine_io.cpp  torricelly_type_io.cpp  torricelly_value_io.cpp  torricelly_variable_value_io.cpp
torricelly-lang/src/: CMakeLists.txt  torricelly_instruction.cpp  torricelly_instruction_code.cpp  torricelly_instruction_code_io.cpp  torricelly_instruction_io.cpp  torricelly_io.cpp  torricelly_module.cpp  torricelly_subroutine.cpp  torricelly_subroutine_io.cpp  torricelly_type.cpp  torricelly_type_io.cpp  torricelly_value.cpp  torricelly_variable_value.cpp  torricelly_variable_value_io.cpp
torricelly-native-library/arrays/: CMakeLists.txt
torricelly-native-library/arrays/src/: CMakeLists.txt  arrays.mblaise  torricelly_array_io.cpp
torricelly-native-library/io/: CMakeLists.txt
torricelly-native-library/io/src/: CMakeLists.txt  io.blaise  io.mblaise  torricelly_input.cpp  torricelly_ouput.cpp
torricelly-native-library/math/: CMakeLists.txt
torricelly-native-library/math/src/: CMakeLists.txt  math.mblaise  torricelly_const.cpp  torricelly_exp.cpp  torricelly_log.cpp  torricelly_math.cpp  torricelly_pow.cpp  torricelly_random.cpp  torricelly_sqrt.cpp
torricelly-native-library/matrices/: CMakeLists.txt
torricelly-native-library/random/: CMakeLists.txt
torricelly-native-library/strings/: CMakeLists.txt
torricelly-native-library/system/: CMakeLists.txt
(+203 files in other folders)
