cmake_minimum_required(VERSION 3.13)
project(gasp-compiler LANGUAGES CXX VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(libs)
add_subdirectory(common)
add_subdirectory(blaise-lang-tokenizer)
add_subdirectory(blaise-lang)
add_subdirectory(blaise-lang-parser)
add_subdirectory(torricelly-lang)
add_subdirectory(torricelly-lang-io)
add_subdirectory(blaise-to-torricelly)
add_subdirectory(gasp)
