add_library(gasp-blaise-lang-parser STATIC "")
set_target_properties(gasp-blaise-lang-parser PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(gasp-blaise-lang-parser gasp-common)
target_link_libraries(gasp-blaise-lang-parser libsanelli)
target_link_libraries(gasp-blaise-lang-parser gasp-blaise-lang)
target_link_libraries(gasp-blaise-lang-parser gasp-blaise-lang-tokenizer)
target_include_directories(gasp-blaise-lang-parser PUBLIC include)

add_executable(gasp-blaise-lang-parser-test "")
set_target_properties(gasp-blaise-lang-parser-test PROPERTIES LINKER_LANGUAGE CXX)
target_link_libraries(gasp-blaise-lang-parser-test gasp-blaise-lang-tokenizer)
target_link_libraries(gasp-blaise-lang-parser-test gasp-blaise-lang-parser)
target_link_libraries(gasp-blaise-lang-parser-test gasp-blaise-lang)
target_link_libraries(gasp-blaise-lang-parser-test gasp-common)
target_link_libraries(gasp-blaise-lang-parser-test libsanelli)
target_link_libraries(gasp-blaise-lang-parser-test Catch2::Catch2)

add_subdirectory(include)
add_subdirectory(src)
